tests/unit_tests/sema/condition_decl_invalid_condition_01.cc
// RUN: %cxx -verify %s

struct S {};

void f() {
  if (S s = S{}) {  // expected-error {{invalid condition expression of type '::S'}}
  }
}
